--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,5 +85,5 @@ stages:
             displayName: 'Azure App Service Deploy: website'
             inputs:
               azureSubscription: 'Resource Manager - Tailspin - Space Game'
-              appName: 'tailspin-space-game-web-1234'
+              appName: 'tailspin-space-game-web-1234-ejh6f2e7d0b6fwg4.southeastasia-01'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
